# LogStatCollector

./: CMakeLists.txt
src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  CollectStat.cpp  CollectStat.h  UserActionsStat.cpp  UserActionsStat.h  main.cpp
src/lib/: rapidjson.cmake
utils/: generate_log_files.py
